// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`extends 1`] = `
"/**
 * The bread crumbs indicate the navigate path and trigger the active page.
 *
 * @class
 *
 * @extends {PureComponent<props>}
 * @typedef {object} props
 * @property {any} navigation
 */
export class BreadCrumbs extends PureComponent {}
"
`;

exports[`template for callback 1`] = `
"/**
 * @template T
 *
 * @callback CallbackName
 * @param {GetStyles<T>} getStyles
 * @returns {UseStyle<T>}
 */
"
`;

exports[`typeParam for callback 1`] = `
"/**
 * @typeParam T
 *
 * @callback CallbackName
 * @param {GetStyles<T>} getStyles
 * @returns {UseStyle<T>}
 */
"
`;
